force-app/main/default/objects/Inquiry__c/fields/Cargo_Mode__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Mode__c</fullName>
    <label>Cargo Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>FCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>