force-app/main/default/objects/Inquiry__c/fields/Cargo_Mode_Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Mode_Container_Type__c</fullName>
    <label>Cargo Mode &amp; Container Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>