force-app/main/default/objects/Inquiry__c/fields/Cargo_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Unit__c</fullName>
    <label>Cargo Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoUnit</valueSetName>
    </valueSet>
</CustomField>