force-app/main/default/objects/Inquiry__c/fields/CombineDEMDET__c.field-meta.xml
<CustomField>
    <fullName>CombineDEMDET__c</fullName>
    <formula>ReferencePrice__r.Combined_DEMDET_Des__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combine DEM/DET</label>
    <type>Checkbox</type>
</CustomField>