force-app/main/default/objects/Inquiry__c/fields/ComboProduct1__c.field-meta.xml
<CustomField>
    <fullName>ComboProduct1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combo Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ComboProduct__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ComboProduct__c</referenceTo>
    <relationshipLabel>Inquiry</relationshipLabel>
    <relationshipName>Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>