force-app/main/default/objects/Inquiry__c/fields/ComboProduct__c.field-meta.xml
<CustomField>
    <fullName>ComboProduct__c</fullName>
    <label>Combo Product - Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ComboProduct</valueSetName>
    </valueSet>
</CustomField>