force-app/main/default/objects/Inquiry__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity</label>
    <referenceTo>Commodity__c</referenceTo>
    <relationshipLabel>Inquiry</relationshipLabel>
    <relationshipName>Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>