force-app/main/default/objects/Inquiry__c/fields/CommodityDetail__c.field-meta.xml
<CustomField>
    <fullName>CommodityDetail__c</fullName>
    <label>Commodity Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>