force-app/main/default/objects/Inquiry__c/fields/ContainerQuantity1__c.field-meta.xml
<CustomField>
    <fullName>ContainerQuantity1__c</fullName>
    <label>Container Quantity 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>