force-app/main/default/objects/Inquiry__c/fields/ContainerQuantity3__c.field-meta.xml
<CustomField>
    <fullName>ContainerQuantity3__c</fullName>
    <label>Container Quantity 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>