force-app/main/default/objects/Inquiry__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Request_from_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>