force-app/main/default/objects/Inquiry__c/fields/Customer_Name_Flow__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Flow__c</fullName>
    <description>Use for flow only</description>
    <formula>Customer__r.Name</formula>
    <label>Customer Name (Flow)</label>
    <type>Text</type>
</CustomField>