force-app/main/default/objects/Inquiry__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <label>Delivery Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>