force-app/main/default/objects/Inquiry__c/fields/DemDest__c.field-meta.xml
<CustomField>
    <fullName>DemDest__c</fullName>
    <formula>ReferencePrice__r.DEM_Dest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEM (Dest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>