force-app/main/default/objects/Inquiry__c/fields/DETdest__c.field-meta.xml
<CustomField>
    <fullName>DETdest__c</fullName>
    <formula>ReferencePrice__r.DET_Dest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DET (Dest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>