force-app/main/default/objects/Inquiry__c/fields/DIM_H__c.field-meta.xml
<CustomField>
    <fullName>DIM_H__c</fullName>
    <label>DIM (H)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>