force-app/main/default/objects/Inquiry__c/fields/DIM_W__c.field-meta.xml
<CustomField>
    <fullName>DIM_W__c</fullName>
    <label>DIM (W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>