force-app/main/default/objects/Inquiry__c/fields/DIMDimension__c.field-meta.xml
<CustomField>
    <fullName>DIMDimension__c</fullName>
    <label>DIM (Dimension)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>