force-app/main/default/objects/Inquiry__c/fields/EstimatedWinRate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedWinRate__c</fullName>
    <label>Estimated Win Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>