force-app/main/default/objects/Inquiry__c/fields/ExportCountry__c.field-meta.xml
<CustomField>
    <fullName>ExportCountry__c</fullName>
    <formula>TEXT( POL__r.Country_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Country</label>
    <type>Text</type>
</CustomField>