force-app/main/default/objects/Inquiry__c/fields/Full_Copy_Inquiry_check__c.field-meta.xml
<CustomField>
    <fullName>Full_Copy_Inquiry_check__c</fullName>
    <formula>Valid_End_Date__c &lt;  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Copy Inquiry check</label>
    <type>Checkbox</type>
</CustomField>