force-app/main/default/objects/Inquiry__c/fields/Gross_WeightKg__c.field-meta.xml
<CustomField>
    <fullName>Gross_WeightKg__c</fullName>
    <label>Gross Weight(Kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>