force-app/main/default/objects/Inquiry__c/fields/ImportCountry__c.field-meta.xml
<CustomField>
    <fullName>ImportCountry__c</fullName>
    <formula>text( PODAOA1__r.Country_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Country</label>
    <type>Text</type>
</CustomField>