force-app/main/default/objects/Inquiry__c/fields/InitialOpinion__c.field-meta.xml
<CustomField>
    <fullName>InitialOpinion__c</fullName>
    <label>Initial Opinion</label>
    <type>TextArea</type>
</CustomField>