force-app/main/default/objects/Inquiry__c/fields/Inquiry_PIC_Flow__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_PIC_Flow__c</fullName>
    <description>Flow only</description>
    <formula>InquiryPIC__r.FirstName &amp; &quot; &quot; &amp;  InquiryPIC__r.LastName</formula>
    <label>Inquiry PIC (Flow)</label>
    <type>Text</type>
</CustomField>