force-app/main/default/objects/Inquiry__c/fields/InquiryPIC__c.field-meta.xml
<CustomField>
    <fullName>InquiryPIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>