force-app/main/default/objects/Inquiry__c/fields/InquirysNote__c.field-meta.xml
<CustomField>
    <fullName>InquirysNote__c</fullName>
    <label>Inquiry&apos;s Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>