force-app/main/default/objects/Inquiry__c/fields/Note_for_DEM_DET__c.field-meta.xml
<CustomField>
    <fullName>Note_for_DEM_DET__c</fullName>
    <formula>ReferencePrice__r.Notes_DEMDET_Dest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note for DEM/DET</label>
    <type>Text</type>
</CustomField>