force-app/main/default/objects/Inquiry__c/fields/Notes_for_RFP_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_RFP_Email_Template__c</fullName>
    <label>Notes for RFP Email Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>