force-app/main/default/objects/Inquiry__c/fields/PackingMethod__c.field-meta.xml
<CustomField>
    <fullName>PackingMethod__c</fullName>
    <label>Packing Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>