force-app/main/default/objects/Inquiry__c/fields/PIC_of_Delivery_Destination__c.field-meta.xml
<CustomField>
    <fullName>PIC_of_Delivery_Destination__c</fullName>
    <label>PIC of Delivery Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>