force-app/main/default/objects/Inquiry__c/fields/PIC_of_Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>PIC_of_Pickup_Location__c</fullName>
    <label>PIC of Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>