force-app/main/default/objects/Inquiry__c/fields/Pickup_Address__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Address__c</fullName>
    <label>Pickup Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>