force-app/main/default/objects/Inquiry__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <label>Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>