force-app/main/default/objects/Inquiry__c/fields/PODAOA1__c.field-meta.xml
<CustomField>
    <fullName>PODAOA1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>Request_from_Customer1</relationshipName>
    <type>Lookup</type>
</CustomField>