force-app/main/default/objects/Inquiry__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L(A.O.D)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>Request_from_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>