force-app/main/default/objects/Inquiry__c/fields/QuoteID__c.field-meta.xml
<CustomField>
    <fullName>QuoteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>Request_from_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>