force-app/main/default/objects/Inquiry__c/fields/Rate_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Rate_Requirement__c</fullName>
    <label>Rate Requirement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>