force-app/main/default/objects/Inquiry__c/fields/Reason_lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_lost__c</fullName>
    <label>Reason lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price is not match with customer required</fullName>
            </value>
            <value>
                <fullName>Customer change their plan in exporting</fullName>
            </value>
            <value>
                <fullName>Shipping line cancel booking because space cutting or out of empty container</fullName>
            </value>
            <value>
                <fullName>Full space</fullName>
            </value>
            <value>
                <fullName>Delay in releasing booking - customer choose other forwarder</fullName>
            </value>
            <value>
                <fullName>Did not found the reason - waiting for customer&apos;s confirmation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>