force-app/main/default/objects/Inquiry__c/fields/Required_Information__c.field-meta.xml
<CustomField>
    <fullName>Required_Information__c</fullName>
    <label>Required Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Handling Charge</fullName>
            </value>
            <value>
                <fullName>Local Charge</fullName>
            </value>
            <value>
                <fullName>Transit Time</fullName>
            </value>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Frequency</fullName>
            </value>
            <value>
                <fullName>Ocean Freight Rate</fullName>
            </value>
            <value>
                <fullName>Air Freight Rate</fullName>
            </value>
            <value>
                <fullName>Direct Or Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>