force-app/main/default/objects/Inquiry__c/fields/Required_Service__c.field-meta.xml
<CustomField>
    <fullName>Required_Service__c</fullName>
    <label>Required Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Fumigation Service Required</fullName>
            </value>
            <value>
                <fullName>Consolidation Service Required</fullName>
            </value>
            <value>
                <fullName>Warehouse Service Required</fullName>
            </value>
            <value>
                <fullName>Trading Service Required</fullName>
            </value>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
            <value>
                <fullName>Customs Clearance Service Required</fullName>
            </value>
            <value>
                <fullName>Transportation Service Required</fullName>
            </value>
            <value>
                <fullName>Value Added Service Required</fullName>
            </value>
            <value>
                <fullName>Forwarding Service Required</fullName>
            </value>
            <value>
                <fullName>C/O Service Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>