force-app/main/default/objects/Inquiry__c/fields/ReturningInquiryReason__c.field-meta.xml
<CustomField>
    <fullName>ReturningInquiryReason__c</fullName>
    <label>Returning Inquiry Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>